--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prettier:format": "prettier --write src"
   },
   "dependencies": {
     "lucide-react": "^0.474.0",
@@ -24,6 +25,7 @@
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.7",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
